--- a/vignettes/create-figures.Rmd
+++ b/vignettes/create-figures.Rmd
@@ -29,29 +29,41 @@ After loading the package, you can use the functions to create figures. You can 
 
 ## Metrics panel
 ```{r, fig.width = 8, fig.height = 7.5}
-AKesp::esp_metrics(data = AKesp::metric_panel, 
-                   species = "Sablefish", 
-                   region = "GOA",
-                   approved = TRUE, 
-                   order = TRUE, 
-                   out = "ggplot")
+AKesp::esp_metrics(
+  data = AKesp::metric_panel,
+  species = "Sablefish",
+  region = "GOA",
+  approved = TRUE,
+  order = TRUE,
+  out = "ggplot"
+)
 ```
 
 ## Correlation matrices
 ```{r, fig.width = 15, fig.height = 20}
-AKesp::esp_cor_matrix(AKesp::sablefish, 
-                      out = "ggplot")
+dat <- AKesp::get_esp_data("Alaska Sablefish")
+
+AKesp::esp_cor_matrix_long(
+  data = dat,
+  out = "ggplot"
+)
 ```
 
 ## Indicator histograms
 ```{r, fig.width = 10, fig.height = 20}
-AKesp::esp_hist(AKesp::sablefish, 
-                out = "ggplot")
+AKesp::esp_hist_long(
+  data = dat,
+  out = "ggplot"
+)
 ```
 
 ## Traffic plots
 Traffic light plots are broken into multiple images, each with 5 plots.
-```{r, fig.width = 5, fig.height = 10}
-AKesp::esp_traffic(AKesp::sablefish, 
-                   out = "ggplot")
+```{r, fig.width = 8, fig.height = 10}
+AKesp::esp_traffic_long(
+  data = dat,
+  paginate = TRUE,
+  out = "ggplot",
+  silent = TRUE
+)
 ```
