--- a/vignettes/create-tables.Rmd
+++ b/vignettes/create-tables.Rmd
@@ -31,12 +31,18 @@ Most tables are automatically created from the `table_spreadsheet.csv` and the `
 
 A traffic light table can be automatically created from a spreadsheet that has a column for year and a column for each indicator.
 ```{r}
-AKesp::esp_traffic_tab(data = AKesp::sablefish, 
-                       year = 2020)
+dat <- AKesp::get_esp_data("Alaska Sablefish")
+
+AKesp::esp_traffic_tab_long(
+  data = dat,
+  year = 2020
+)
 ```
 
 Multiple years can be shown.
 ```{r}
-AKesp::esp_traffic_tab(data = AKesp::sablefish, 
-                       year = 2016:2020)
+AKesp::esp_traffic_tab_long(
+  data = dat,
+  year = 2016:2020
+)
 ```
