--- a/book/index.Rmd
+++ b/book/index.Rmd
@@ -16,6 +16,8 @@ knitr::opts_chunk$set(echo = TRUE,
                       warning = FALSE,
                       message = FALSE,
                       fig.align = "center")
+
+`%>%` <- magrittr::`%>%`
 ```
 
 # Introduction
