--- a/inst/esp-template.Rmd
+++ b/inst/esp-template.Rmd
@@ -49,15 +49,15 @@ con_model_path <- params$con_model_path
 bayes_path <- params$bayes_path
 stock_image <- params$stock_image
 
-if(stock_image == "default"){
+if (stock_image == "default") {
   stock_image <- system.file("images/noaa.jpg", package = "AKesp")
 }
 
-if(con_model_path == "default"){
+if (con_model_path == "default") {
   con_model_path <- system.file("images/noaa.jpg", package = "AKesp")
 }
 
-if(bayes_path == "default"){
+if (bayes_path == "default") {
   bayes_path <- system.file("images/noaa.jpg", package = "AKesp")
 }
 ```
@@ -74,37 +74,40 @@ knitr::include_graphics(path = stock_image)
 
 ```{r, text-report-card, eval = params$esp_type == "report_card"}
 child <- knitr::knit_child(system.file("esp-report-card-child.Rmd", package = "AKesp"),
-                  quiet = TRUE)
+  quiet = TRUE
+)
 cat(child, sep = "\n\n")
 ```
 
 ```{r, text, eval = params$esp_type != "report_card"}
-if(class(try(readtext::readtext(esp_text)))[1] == "try-error"){
+if (class(try(readtext::readtext(esp_text)))[1] == "try-error") {
   print("Can't find text template!")
 } else {
   temp_file <- "temp-text.txt"
-invisible(file.create(temp_file))
+  invisible(file.create(temp_file))
 
-text <- readtext::readtext(file = esp_text)
-writeLines(text = text$text, con = temp_file)
+  text <- readtext::readtext(file = esp_text)
+  writeLines(text = text$text, con = temp_file)
 
-new_text <- readLines(temp_file)
-# remove instructions section
-new_text <- new_text[stringr::str_which(new_text, "# Executive Summary"):length(new_text)]
+  new_text <- readLines(temp_file)
+  # remove instructions section
+  new_text <- new_text[stringr::str_which(new_text, "# Executive Summary"):length(new_text)]
 
-# knit to new .txt
-knit_Rmd <- ("temp-text-knit.txt")
-invisible(file.create(knit_Rmd))
+  # knit to new .txt
+  knit_Rmd <- ("temp-text-knit.txt")
+  invisible(file.create(knit_Rmd))
 
-knitr::knit(text = new_text,
-            output = knit_Rmd,
-            quiet = TRUE)
+  knitr::knit(
+    text = new_text,
+    output = knit_Rmd,
+    quiet = TRUE
+  )
 
-# include knitted text
-cat(readLines(knit_Rmd), sep = "\n\n")
+  # include knitted text
+  cat(readLines(knit_Rmd), sep = "\n\n")
 
-# clean up temp files
-invisible(file.remove(temp_file, knit_Rmd))
+  # clean up temp files
+  invisible(file.remove(temp_file, knit_Rmd))
 }
 ```
 
@@ -112,62 +115,116 @@ invisible(file.remove(temp_file, knit_Rmd))
 
 # Tables {-}
 
-```{r, tables, message = FALSE}
-# make traffic light table if creating report card
-# or if traffic light table position isn't specified for other reports
-if(params$esp_type == "report_card" |
-   class(try(read.csv(file = tab_spreadsheet)))[1] == "try-error" |
-   !"traffic light table" %in% try(read.csv(file = tab_spreadsheet))
-   ) {
-  child <- knitr::knit_child(system.file("table-child.Rmd", package = "AKesp"),
-                  quiet = TRUE)
+```{r, standard-tables, message = FALSE, include = params$esp_type == "report_card"}
+child <- knitr::knit_child(system.file("table-child.Rmd", package = "AKesp"),
+  quiet = TRUE
+)
 cat(child, sep = "\n\n")
-} 
+```
 
-# make all other tables if table spreadsheet exists
-if(params$esp_type != "report_card" &
-   class(try(read.csv(file = tab_spreadsheet)))[1] != "try-error") {
+```{r, tables, message = FALSE, eval = params$esp_type != "report_card"}
+# otherwise, make tables according to spreadsheet
+if (class(try(read.csv(file = tab_spreadsheet)))[1] != "try-error") {
+  
+  # read spreadsheet
   tabs <- read.csv(file = tab_spreadsheet)
-  for (i in 1:nrow(tabs)) {
-    cat("\n\n")
+
+for (i in 1:nrow(tabs)) {
+  cat("\n\n")
+
+  if (tabs$chunk_name[i] == "eco-table") {
+  child <- knitr::knit_child(text = "```{r, label = new-eco-table, ref.label = c('table-set-up', 'eco-table')}
+                             ```",
+                             quiet = TRUE)
+  cat(child, sep = "\n\n")
+
+  } else if (tabs$chunk_name[i] == "socio-table") {
+  child <- knitr::knit_child(text = "```{r, label = new-socio-table, ref.label = c('table-set-up', 'socio-table')}
+                             ```",
+                             quiet = TRUE)
+  cat(child, sep = "\n\n")
+
+  } else {
     tab <- tabs$file_name[i]
     AKesp::render_tab(
       lab = tabs$chunk_name[i],
       cap = tabs$caption[i]
     ) %>%
       try()
-    cat("\n\n")
   }
+
+  cat("\n\n")
+}
+} else {
+  message("You are not creating a report card, and the table spreadsheet is missing!")
 }
 ```
 
 \newpage
 
 # Figures {-}
-```{r, figures, fig.height = 8}
-child <- knitr::knit_child(system.file("figure-child.Rmd", package = "AKesp"),
-                  quiet = TRUE)
-cat(child, sep = "\n\n")
-# the child doc automatically pulls in (from paths specified in .Rmd params):
-# fig 1: conceptual model 
+```{r, standard-figures, fig.height = 8, include = params$esp_type == "report_card"}
+  child <- knitr::knit_child(system.file("figure-child.Rmd", package = "AKesp"),
+    quiet = TRUE
+  )
+  cat(child, sep = "\n\n")
+```
+
+```{r, figures, eval = params$esp_type != "report_card"}
+# a report card automatically pulls in (from paths specified in .Rmd params):
+# fig 1: conceptual model
 # fig 2: ecosystem traffic light figs
 # fig 3: socioeconomic traffic light figs
 # fig 4: overall traffic score summary
 # fig 5: bayesian summary
-# additional figures will be added after these, if a fig_spreadsheet exists
 
-# pull in extra figs if specified
-if(params$esp_type != "report_card" &
-   class(try(read.csv(file = fig_spreadsheet)))[1] != "try-error"){
-
+# otherwise, all figures need to be specified
+if (class(try(read.csv(file = fig_spreadsheet)))[1] != "try-error") {
+  
   figs <- read.csv(file = fig_spreadsheet)
+
   for (i in 1:nrow(figs)) {
-    try(AKesp::render_fig(
-      img = figs$file_name[i],
-      lab = figs$chunk_name[i],
-      cap = figs$caption[i],
-      alt = figs$alt_text[i]
-    ))
+    if (figs$chunk_name[i] == "conceptual-model") {
+
+       child <- knitr::knit_child(text = "```{r, con-model}
+                                ```",
+  quiet = TRUE
+)
+cat(child, sep = "\n\n")
+    } else if (figs$chunk_name[i] == "traffic-eco") {
+       child <- knitr::knit_child(text = "```{r, traffic-eco}
+                                ```",
+  quiet = TRUE
+)
+cat(child, sep = "\n\n")
+    } else if (figs$chunk_name[i] == "traffic-socio") {
+       child <- knitr::knit_child(text = "```{r, traffic-socio}
+                                ```",
+  quiet = TRUE
+)
+cat(child, sep = "\n\n")
+    } else if (figs$chunk_name[i] == "overall") {
+       child <- knitr::knit_child(text = "```{r, overall}
+                                ```",
+  quiet = TRUE
+)
+cat(child, sep = "\n\n")
+    } else if (figs$chunk_name[i] == "bayesian") {
+       child <- knitr::knit_child(text = "```{r, bayes}
+                                ```",
+  quiet = TRUE
+)
+cat(child, sep = "\n\n")
+    } else {
+      try(AKesp::render_fig(
+        img = figs$file_name[i],
+        lab = figs$chunk_name[i],
+        cap = figs$caption[i],
+        alt = figs$alt_text[i]
+      ))
     }
   }
+} else {
+  message("You are not creating a report card, and the figure spreadsheet is missing!")
+}
 ```
